# MLops-itmo-course

.github/workflows/: ccds-pypi-release.yml  ci.yml  creditcard_fraud.yml  creditcard_fraud_release.yml  release.yml
creditcard_fraud/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.mlflow.yml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt
creditcard_fraud/.github/workflows/: ci.yml  release.yml
creditcard_fraud/creditcard_fraud/: __init__.py  config.py  dataset.py  features.py  ge_validation.py  load_data.py  plots.py  preprocess.py
creditcard_fraud/creditcard_fraud/api/: __init__.py  main.py
creditcard_fraud/creditcard_fraud/modeling/: predict.py  train.py
creditcard_fraud/models/: model.pkl  model_meta.json
creditcard_fraud/notebooks/: EDA.ipynb  Untitled
creditcard_fraud/tests/pytest/: test_api.py  test_data.py  test_ge.py
