[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "creditcard_fraud"
version = "0.1.0"
description = "MLOps: детекция мошеннических транзакций (OpenML Credit Card Fraud)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ITMO MLOps" }]

[tool.flit.module]
name = "creditcard_fraud"
